categories animation to open + close on mobile working; also x button positioning fixed

--- a/app/styles/mobile.css
+++ b/app/styles/mobile.css
@@ -265,6 +265,7 @@ will be correctly compiled during `gulp serve` and `gulp`
 #menuDrawer{
   width: 100%;
   height: 70px;
+  z-index: 4;
 
 }
 
@@ -858,7 +859,7 @@ html, body, main, .mdl-layout__content, .page-content, #map {
   #map > div > div > div.gmnoprint.gm-bundled-control.gm-bundled-control-on-bottom{
     position: fixed !important;
     bottom: 15% !important;
-    
+
   }
   @media screen and (max-height: 750px) {
 
@@ -952,6 +953,7 @@ div#accFCard{
 #accFClose{
   float: right;
   position: relative;
+  top: 2%;
   right: 2%;
 }
 /*iframe video*/
@@ -966,6 +968,7 @@ div#accFCard{
   position: relative;
   left: 2%;
 }
+
 div#athCard{
   display: none;
 }
